# graph-indexing-playground

./: .gitignore  README.md  pyproject.toml  tmp.md
docs/: mongo_setup.md
examples/custom_input/: run.py
examples/custom_set_of_available_verbs/: run.py
examples/custom_set_of_available_workflows/: custom_workflow_definitions.py  run.py
examples/entity_extraction/with_graph_intelligence/: run.py
examples/entity_extraction/with_nltk/: run.py
examples/interdependent_workflows/: run.py
examples/multiple_workflows/: run.py
examples/single_verb/: run.py
examples/use_built_in_workflows/: run.py
examples/various_levels_of_configs/: workflows_and_inputs.py  workflows_and_inputs_with_custom_handlers.py  workflows_only.py
graphrag/index/: __main__.py
notebooks/: global_search.ipynb  graph-visualization.ipynb  local_search.ipynb
pipeline/: mongo.py  pg.py  pipeline.yml  run.py  yt.py
pipeline/models/: news.py  rss.py  scraper.py  transcript.py
pipeline/output/20240808-170013/artifacts/: stats.json
pipeline/utils/: col.py
